Continued work on ragdoll projectile. Can now fire a ragdoll, but doesnt trigger hit events like it should so it doesn't disappear and walking over it cause a camera seizure

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -8,7 +8,7 @@ SimplygonServerIP=127.0.0.1
 bMonitorEditorPerformance=True
 bShowCompilerLogOnCompileError=False
 bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=4
+SCSViewportCameraSpeed=1
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
@@ -77,22 +77,26 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Imported_Content/All_the_guns
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/BarebonesCafeteria
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+OpenAssetsAtExit=/Game/Blueprints/FoodProjectile.FoodProjectile
+OpenAssetsAtExit=/Game/Blueprints/ExperimentalProjectile.ExperimentalProjectile
+OpenAssetsAtExit=/Game/Blueprints/ProjectilePhysicsAsset.ProjectilePhysicsAsset
 
 [RootWindow]
 ScreenPosition=X=84.000 Y=58.000
-WindowSize=X=1532.000 Y=920.000
-InitiallyMaximized=False
+WindowSize=X=1542.000 Y=930.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1018,6 +1022,61 @@ StaticMesh.Transform=True
 StaticMesh.Thumbnail=True
 StaticMesh.Collision=True
 StaticMesh.Navigation=True
+ExperimentalProjectile_C.Tick=True
+ExperimentalProjectile_C.Rendering=True
+ExperimentalProjectile_C.Replication=True
+ExperimentalProjectile_C.Input=True
+ExperimentalProjectile_C.Actor=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LodSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.AdditionalBodyPart=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Thumbnail=True
+SkeletalMesh.TextureStreaming=True
+ExperimentalProjectile_C.Default=True
+REINST_FoodFightersChar_C_1272.Variable=True
+REINST_FoodFightersChar_C_1272.TransformCommon=True
+REINST_FoodFightersChar_C_1272.Sockets=True
+REINST_FoodFightersChar_C_1272.Shape=True
+REINST_FoodFightersChar_C_1272.Navigation=True
+REINST_FoodFightersChar_C_1272.Rendering=True
+REINST_FoodFightersChar_C_1272.Physics=True
+REINST_FoodFightersChar_C_1272.Collision=True
+REINST_FoodFightersChar_C_1272.Tags=True
+REINST_FoodFightersChar_C_1272.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.Activation=True
+CameraComponent.Events=True
+REINST_FoodFightersChar_C_1308.Variable=True
+REINST_FoodFightersChar_C_1308.TransformCommon=True
+REINST_FoodFightersChar_C_1308.Sockets=True
+REINST_FoodFightersChar_C_1308.Shape=True
+REINST_FoodFightersChar_C_1308.Navigation=True
+REINST_FoodFightersChar_C_1308.Rendering=True
+REINST_FoodFightersChar_C_1308.Physics=True
+REINST_FoodFightersChar_C_1308.Collision=True
+REINST_FoodFightersChar_C_1308.Tags=True
+REINST_FoodFightersChar_C_1308.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.Activation=True
+SceneComponent.Events=True
+ProjectileMovementComponent.Collision=True
+K2Node_VariableSet.Events=True
+BodySetup.BodySetup=True
+BodySetup.Physics=True
+BodySetup.Collision=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Imported_Content/All_the_guns/RevolverSkin.RevolverSkin;
@@ -1042,11 +1101,11 @@ RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Dgart_Wallpaper04_jpg/Dgart_Wa
 RecentlyPlaced=/Game/Imported_Content/Posters/FNAF_Inspired_posters/1/poster_1.poster_1;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
-/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset=1
+/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset=0
 /Game/Blueprints/FoodProjectile.FoodProjectile=1
 /Game/Blueprints/FoodFightersChar.FoodFightersChar=1
 /Game/Blueprints/FireProjectile.FireProjectile=1
@@ -1061,10 +1120,14 @@ LastLogListing=FBXImport
 /Game/Blueprints/UI/MainMenu.MainMenu=1
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/Imported_Content/All_the_guns/Colt.Colt=1
+/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
+/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin=0
+/Game/Blueprints/ExperimentalProjectile.ExperimentalProjectile=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -1130,22 +1193,27 @@ SphereComponent.Collision=True
 FoodFightersChar_C.Actor=True
 FireProjectile_C.Actor=True
 IceProjectile_C.Actor=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Animation=False
+SphereComponent.Physics=True
+ExperimentalProjectile_C.Actor=True
 
 [DetailPropertyExpansion]
 FoodProjectile_C=
-SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+SphereComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]" "Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" "Object.Tags.ComponentTags" 
+ShapeComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]" "Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" "Object.Tags.ComponentTags" 
+PrimitiveComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags" 
+SceneComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags" 
+ActorComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags" 
 Object=
 FoodFightersChar_C=
 Character=
 Pawn=
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
-SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-MeshComponent=
+SkeletalMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags" 
+SkinnedMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags" 
+MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags" 
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
 FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
@@ -1156,6 +1224,9 @@ Visual=
 Button=
 ContentWidget=
 PanelWidget=
+ProjectileMovementComponent="Object.Tags.ComponentTags" 
+MovementComponent="Object.Tags.ComponentTags" 
+ExperimentalProjectile_C=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1221,5 +1292,16 @@ bShowViewportTransportControls=True
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+
+[/Script/UnrealEd.PersonaOptions]
+ViewportBackgroundColor=(R=0.040000,G=0.040000,B=0.040000,A=0.000000)
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+ViewModeIndex=VMI_Lit
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
+NotifyTimingNodeColor=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
 
 
