Ammo Switching works in the HUD for Player 1

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,7 +87,10 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
@@ -1095,6 +1098,37 @@ SkeletalMeshActor.Tags=True
 SkeletalMeshActor.Activation=True
 SkeletalMeshActor.Input=True
 SkeletalMeshActor.Actor=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Style=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Performance=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Navigation=True
+EditableTextBox.Events=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Performance=True
+ProgressBar.Render Transform=True
+ProgressBar.Navigation=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Performance=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Navigation=True
+Widget.Behavior=True
+Widget.Performance=True
+Widget.Render Transform=True
+Widget.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Performance=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Navigation=True
+HUDP1_C.Default=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export;
@@ -1143,6 +1177,7 @@ LastLogListing=LoadErrors
 /Game/Blueprints/ExperimentalProjectile.ExperimentalProjectile=0
 /Game/Imported_Content/Other_Stuff/Green_Pears/pear_export_Skeleton.pear_export_Skeleton=0
 /Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export=0
+/Game/UI/HUDP1.HUDP1=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1218,6 +1253,7 @@ SkeletalMeshComponent.Collision=True
 SkeletalMeshComponent.Animation=False
 SphereComponent.Physics=True
 ExperimentalProjectile_C.Actor=True
+WorldSettings.World=True
 
 [DetailPropertyExpansion]
 FoodProjectile_C=
@@ -1235,7 +1271,7 @@ SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseA
 SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 MeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C=Object.Actor.Tags
+FireProjectile_C="Object.Actor.Tags" 
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
