Ammo Switching should work for all
Someone with 2+ controllers needs to test that it works.

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,6 +91,9 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
+OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
+OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
+OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
