For Player 1, flashing red on low health should work

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1132,6 +1132,14 @@ CanvasPanel.Performance=True
 CanvasPanel.Render Transform=True
 CanvasPanel.Navigation=True
 HUDP1_C.Default=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Behavior=True
+Border.Performance=True
+Border.Render Transform=True
+Border.Navigation=True
+Border.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export;
@@ -1257,6 +1265,11 @@ SkeletalMeshComponent.Animation=False
 SphereComponent.Physics=True
 ExperimentalProjectile_C.Actor=True
 WorldSettings.World=True
+Border.Appearance=True
+VerticalBox.Behavior=True
+EditableTextBox.Behavior=True
+Border.Behavior=True
+Image.Behavior=True
 
 [DetailPropertyExpansion]
 FoodProjectile_C=
@@ -1265,7 +1278,7 @@ ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.Re
 PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
-Object=
+Object="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
 FoodFightersChar_C=
 Character=
 Pawn=
@@ -1278,14 +1291,15 @@ FireProjectile_C="Object.Actor.Tags"
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
-Widget=
-Visual=
+Widget="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
+Visual="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
 Button=
-ContentWidget=
-PanelWidget=
+ContentWidget="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
+PanelWidget="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
 ProjectileMovementComponent=Object.Tags.ComponentTags
 MovementComponent=Object.Tags.ComponentTags
 ExperimentalProjectile_C=
+Border="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
