--- a/Game/Saved/Config/Windows/Editor.ini
+++ b/Game/Saved/Config/Windows/Editor.ini
@@ -201,7 +201,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 31",\
+									"ForegroundTab": "Document : 47",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -213,15 +213,15 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.20000000298023224,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "CompilerResults",\
+									"ForegroundTab": "FindResults",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
-											"TabState": "OpenedTab"\
+											"TabState": "ClosedTab"\
 										),\
 										(\
 											"TabId": "FindResults",\
-											"TabState": "ClosedTab"\
+											"TabState": "OpenedTab"\
 										)\
 									]\
 								)\
