first pass bug fix on flashing hud on low health. all changes propogated to all player's HUDs

--- a/Game/Saved/Config/Windows/Editor.ini
+++ b/Game/Saved/Config/Windows/Editor.ini
@@ -147,7 +147,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": false,\
+					"HideTabWell": true,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -201,7 +201,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 47",\
+									"ForegroundTab": "Document : 24",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -213,7 +213,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.20000000298023224,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "FindResults",\
+									"ForegroundTab": "None",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
@@ -221,7 +221,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 										),\
 										(\
 											"TabId": "FindResults",\
-											"TabState": "OpenedTab"\
+											"TabState": "ClosedTab"\
 										)\
 									]\
 								)\
