--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/UI
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -87,17 +87,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
-OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
-OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
-OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
-OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
-WindowSize=X=1536.000 Y=864.000
+WindowSize=X=1546.000 Y=874.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1140,6 +1134,9 @@ Border.Performance=True
 Border.Render Transform=True
 Border.Navigation=True
 Border.Events=True
+HUDP2_C.Default=True
+HUDP3_C.Default=True
+HUDP4_C.Default=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export;
@@ -1164,7 +1161,7 @@ RecentlyPlaced=/Game/Imported_Content/winners_never_quit.winners_never_quit;
 RecentlyPlaced=/Game/Imported_Content/main_word.main_word;
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1189,6 +1186,10 @@ LastLogListing=LoadErrors
 /Game/Imported_Content/Other_Stuff/Green_Pears/pear_export_Skeleton.pear_export_Skeleton=0
 /Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export=0
 /Game/UI/HUDP1.HUDP1=1
+/Game/UI/MainMenu.MainMenu=1
+/Game/UI/HUDP4.HUDP4=1
+/Game/UI/HUDP3.HUDP3=1
+/Game/UI/HUDP2.HUDP2=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1278,7 +1279,7 @@ ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.Re
 PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
-Object="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
+Object=
 FoodFightersChar_C=
 Character=
 Pawn=
@@ -1287,19 +1288,19 @@ SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseA
 SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 MeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C="Object.Actor.Tags" 
+FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
-Widget="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
-Visual="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
+Widget=
+Visual=
 Button=
-ContentWidget="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
-PanelWidget="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
+ContentWidget=
+PanelWidget=
 ProjectileMovementComponent=Object.Tags.ComponentTags
 MovementComponent=Object.Tags.ComponentTags
 ExperimentalProjectile_C=
-Border="Object.Content.ContentColorAndOpacity" "Object.Content.Padding" "Object.Appearance.Background" "Object.Appearance.BrushColor" 
+Border=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
