HUD should switch ammo text, but doesn't.
I have absolutely no idea why it doesn't work, but it doesn't.

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,7 +87,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
@@ -1200,7 +1204,7 @@ SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComp
 Extra=False
 Input=False
 Optimization=False
-Panel=False
+Panel=True
 Primitive=False
 Uncategorized=False
 User Created=False
@@ -1279,7 +1283,7 @@ ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.Re
 PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
-Object=
+Object="Object.Style.WidgetStyle" 
 FoodFightersChar_C=
 Character=
 Pawn=
@@ -1292,15 +1296,16 @@ FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
-Widget=
-Visual=
-Button=
-ContentWidget=
+Widget="Object.Style.WidgetStyle" 
+Visual="Object.Style.WidgetStyle" 
+Button="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
+ContentWidget="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
 PanelWidget=
 ProjectileMovementComponent=Object.Tags.ComponentTags
 MovementComponent=Object.Tags.ComponentTags
 ExperimentalProjectile_C=
-Border=
+Border="Object.Content.ContentColorAndOpacity" "Object.Appearance.Background" 
+EditableTextBox="Object.Style.WidgetStyle" 
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
