--- a/Game/Saved/Config/Windows/Editor.ini
+++ b/Game/Saved/Config/Windows/Editor.ini
@@ -147,7 +147,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": true,\
+					"HideTabWell": false,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -201,7 +201,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 24",\
+									"ForegroundTab": "Document : 8",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -213,11 +213,11 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.20000000298023224,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "None",\
+									"ForegroundTab": "CompilerResults",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
-											"TabState": "ClosedTab"\
+											"TabState": "OpenedTab"\
 										),\
 										(\
 											"TabId": "FindResults",\
