Fixed text change for ammo types. changes propagated across all players' HUDs

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -87,15 +87,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
-OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
-OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
-WindowSize=X=1546.000 Y=874.000
+WindowSize=X=1556.000 Y=884.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1283,7 +1279,7 @@ ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.Re
 PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
-Object="Object.Style.WidgetStyle" 
+Object=
 FoodFightersChar_C=
 Character=
 Pawn=
@@ -1296,16 +1292,17 @@ FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
-Widget="Object.Style.WidgetStyle" 
-Visual="Object.Style.WidgetStyle" 
-Button="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
-ContentWidget="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
+Widget=
+Visual=
+Button=Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered
+ContentWidget=
 PanelWidget=
 ProjectileMovementComponent=Object.Tags.ComponentTags
 MovementComponent=Object.Tags.ComponentTags
 ExperimentalProjectile_C=
-Border="Object.Content.ContentColorAndOpacity" "Object.Appearance.Background" 
+Border=
 EditableTextBox="Object.Style.WidgetStyle" 
+ProgressBar="Object.Style.WidgetStyle" 
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
