--- a/Game/Saved/Config/Windows/Editor.ini
+++ b/Game/Saved/Config/Windows/Editor.ini
@@ -147,7 +147,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": false,\
+					"HideTabWell": true,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -201,7 +201,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 8",\
+									"ForegroundTab": "Document : 0",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
