made option to choose number of players from main menu. forgot to map all the HUDs to the right players earlier so that has been fixed as well

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/FoodFightersGI.FoodFightersGI_C
 GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Blueprints/FoodFightersGM.FoodFightersGM_C
@@ -75,4 +75,3 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
-
