--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,29 +77,21 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/Sounds/Music
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/UI/CharacterSelect.CharacterSelect
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersGI.FoodFightersGI
-OpenAssetsAtExit=/Game/Maps/Main.Main:PersistentLevel.Main
-OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
-OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
-OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
-WindowSize=X=1566.000 Y=894.000
+WindowSize=X=1616.000 Y=944.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -120,7 +112,7 @@ UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-GenericImport=C:/Users/Alex/Desktop/Whion 2017-04-01 at 1.14.41 PM/Gun/gun.obj
+GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/External Assets/Sounds/Sound Effects/scream01.wav
 GenericExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -1145,6 +1137,23 @@ Border.Events=True
 HUDP2_C.Default=True
 HUDP3_C.Default=True
 HUDP4_C.Default=True
+MediaPlayer.Playback=True
+MediaPlayer.Source=True
+MediaPlayer.Information=True
+SoundWave.Compression=True
+SoundWave.SoundWave=True
+SoundWave.Subtitles=True
+SoundWave.Sound=True
+SoundWave.Info=True
+SoundWave.ImportSettings=True
+SoundWave.Debug=True
+SoundWave.Concurrency=True
+SoundWave.Attenuation=True
+MediaSoundWave.MediaPlayer=True
+MediaSoundWave.Info=True
+MediaSoundWave.Debug=True
+MediaSoundWave.Concurrency=True
+MediaSoundWave.Attenuation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export;
@@ -1169,7 +1178,7 @@ RecentlyPlaced=/Game/Imported_Content/winners_never_quit.winners_never_quit;
 RecentlyPlaced=/Game/Imported_Content/main_word.main_word;
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1198,6 +1207,10 @@ LastLogListing=LoadErrors
 /Game/UI/HUDP4.HUDP4=1
 /Game/UI/HUDP3.HUDP3=1
 /Game/UI/HUDP2.HUDP2=1
+/Game/Sounds/Sound_Effects/2xfemalescream.2xfemalescream=1
+/Game/Sounds/SoundEffects/wilhelmscream.wilhelmscream=1
+/Game/Sounds/SoundEffects/scream03.scream03=1
+/Game/Sounds/SoundEffects/scream01.scream01=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1280,6 +1293,7 @@ EditableTextBox.Behavior=True
 Border.Behavior=True
 Image.Behavior=True
 TextBlock.Performance=False
+K2Node_VariableGet.Variable=False
 
 [DetailPropertyExpansion]
 FoodProjectile_C=
@@ -1289,9 +1303,9 @@ PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArra
 SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 Object=
-FoodFightersChar_C=
-Character=
-Pawn=
+FoodFightersChar_C=Object.ScreamsArray
+Character=Object.ScreamsArray
+Pawn=Object.ScreamsArray
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
 SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
@@ -1312,7 +1326,7 @@ ExperimentalProjectile_C=
 Border=
 EditableTextBox=Object.Style.WidgetStyle
 ProgressBar=Object.Style.WidgetStyle
-Image="Object.Appearance.Brush" 
+Image=Object.Appearance.Brush
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
