--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,21 +77,21 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Sounds/Music
+ContentBrowserTab1.SelectedPaths=/Game/Exported_content/New_folder
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/Maps/BarebonesCafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
-WindowSize=X=1616.000 Y=944.000
+WindowSize=X=1636.000 Y=964.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -108,7 +108,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
+UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -572,8 +572,8 @@ StaticMeshEditor.TimeStamp=2017.02.03-01.08.10
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Maps/BarebonesCafeteria
+MRUItem0=/Game/Maps/BarebonesCafeteria
+MRUItem1=/Game/Maps/Main
 MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem3=/Game/Blueprints/Main
 
@@ -1156,29 +1156,29 @@ MediaSoundWave.Concurrency=True
 MediaSoundWave.Attenuation=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/Coffeet2.Coffeet2;
+RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/glass.glass;
+RecentlyPlaced=/Game/Exported_content/New_folder/Colt.Colt;
+RecentlyPlaced=/Game/Exported_content/New_folder/RevolverSkin.RevolverSkin;
+RecentlyPlaced=/Game/Exported_content/New_folder/Revolver.Revolver;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/StarterContent/Textures/T_Metal_Steel_D.T_Metal_Steel_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Perlin_Noise_M.T_Perlin_Noise_M;
+RecentlyPlaced=/Game/StarterContent/Textures/T_MacroVariation.T_MacroVariation;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Metal_Copper_D.T_Metal_Copper_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_N.T_Brick_Clay_New_N;
+RecentlyPlaced=/Game/StarterContent/Textures/T_CobbleStone_Pebble_D.T_CobbleStone_Pebble_D;
+RecentlyPlaced=/Game/Exported_content/tiled_floor.tiled_floor;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Copper.M_Metal_Copper;
+RecentlyPlaced=/Game/Exported_content/paper_for_wall.paper_for_wall;
+RecentlyPlaced=/Game/Exported_content/bluepaint.bluepaint;
 RecentlyPlaced=/Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Imported_Content/All_the_guns/RevolverSkin.RevolverSkin;
 RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_Gun1SGMat.Colt_Colt_Gun1SGMat;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_BackStrapSGMat.Colt_Colt_BackStrapSGMat;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_blinn1SGMat.Colt_Colt_blinn1SGMat;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_blinn2SGMat.Colt_Colt_blinn2SGMat;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/Diffuse.Diffuse;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/Assault_Rifle.Assault_Rifle;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt.Colt;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/Revolver.Revolver;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/ppsh41_0.ppsh41_0;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/glocki.glocki;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/glock.glock;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/tex_Mat.tex_Mat;
-RecentlyPlaced=/Game/Imported_Content/All_the_guns/defaultMat.defaultMat;
-RecentlyPlaced=/Game/Imported_Content/enhanced-17040-1446660609-11.enhanced-17040-1446660609-11;
-RecentlyPlaced=/Game/Imported_Content/motivation.motivation;
-RecentlyPlaced=/Game/Imported_Content/winners_never_quit.winners_never_quit;
-RecentlyPlaced=/Game/Imported_Content/main_word.main_word;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1299,9 +1299,9 @@ K2Node_VariableGet.Variable=False
 FoodProjectile_C=
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]" "Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" "Object.Tags.ComponentTags
 ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]" "Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" "Object.Tags.ComponentTags
-PrimitiveComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
-SceneComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
-ActorComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 Object=
 FoodFightersChar_C=Object.ScreamsArray
 Character=Object.ScreamsArray
@@ -1309,7 +1309,7 @@ Pawn=Object.ScreamsArray
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
 SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
 SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
-MeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
+MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
 FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
