updated initial speed for ragdol projectile. propogated ragdoll effect to all projectile types. updated ice and fire projectile visuals. removed warning being thrown from player HUD on startup.

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,21 +77,21 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Exported_content/New_folder
+ContentBrowserTab1.SelectedPaths=/Game/UI
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/BarebonesCafeteria
+LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
-WindowSize=X=1636.000 Y=964.000
+WindowSize=X=1646.000 Y=974.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -108,7 +108,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
+UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -570,11 +570,13 @@ SequencerWidgets.TimeStamp=2017.01.14-16.45.50
 SequencerWidgets.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2017.02.03-01.08.10
 StaticMeshEditor.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.01.14-16.44.40
+MaterialEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/BarebonesCafeteria
-MRUItem1=/Game/Maps/Main
-MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/Maps/Main
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Blueprints/Main
 
 [LightingBuildOptions]
@@ -1154,6 +1156,43 @@ MediaSoundWave.Info=True
 MediaSoundWave.Debug=True
 MediaSoundWave.Concurrency=True
 MediaSoundWave.Attenuation=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.MaterialInterface=True
+PreviewMaterial.Thumbnail=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Events=True
+ParticleSystemComponent.Materials=True
+MaterialExpressionVertexColor.MaterialExpression=True
+REINST_FoodFightersChar_C_830.None=True
+REINST_FoodFightersChar_C_830.Tick=True
+REINST_FoodFightersChar_C_830.Character=True
+REINST_FoodFightersChar_C_830.Camera=True
+REINST_FoodFightersChar_C_830.Pawn=True
+REINST_FoodFightersChar_C_830.Rendering=True
+REINST_FoodFightersChar_C_830.Replication=True
+REINST_FoodFightersChar_C_830.Input=True
+REINST_FoodFightersChar_C_830.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/Coffeet2.Coffeet2;
@@ -1178,15 +1217,15 @@ RecentlyPlaced=/Game/Imported_Content/All_the_guns/RevolverSkin.RevolverSkin;
 RecentlyPlaced=/Game/Imported_Content/All_the_guns/Colt_Colt_Gun1SGMat.Colt_Colt_Gun1SGMat;
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
 /Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset=0
-/Game/Blueprints/FoodProjectile.FoodProjectile=1
+/Game/Blueprints/FoodProjectile.FoodProjectile=0
 /Game/Blueprints/FoodFightersChar.FoodFightersChar=0
-/Game/Blueprints/FireProjectile.FireProjectile=1
-/Game/Blueprints/IceProjectile.IceProjectile=1
+/Game/Blueprints/FireProjectile.FireProjectile=0
+/Game/Blueprints/IceProjectile.IceProjectile=0
 /Game/Blueprints/UI/HUD.HUD=1
 /Game/Blueprints/FoodFightersGM.FoodFightersGM=0
 /Game/Blueprints/UI/HUDP1.HUDP1=1
@@ -1202,15 +1241,23 @@ LastLogListing=LoadErrors
 /Game/Blueprints/ExperimentalProjectile.ExperimentalProjectile=0
 /Game/Imported_Content/Other_Stuff/Green_Pears/pear_export_Skeleton.pear_export_Skeleton=0
 /Game/Imported_Content/Other_Stuff/Green_Pears/pear_export.pear_export=0
-/Game/UI/HUDP1.HUDP1=1
-/Game/UI/MainMenu.MainMenu=1
-/Game/UI/HUDP4.HUDP4=1
-/Game/UI/HUDP3.HUDP3=1
-/Game/UI/HUDP2.HUDP2=1
+/Game/UI/HUDP1.HUDP1=0
+/Game/UI/MainMenu.MainMenu=0
+/Game/UI/HUDP4.HUDP4=0
+/Game/UI/HUDP3.HUDP3=0
+/Game/UI/HUDP2.HUDP2=0
 /Game/Sounds/Sound_Effects/2xfemalescream.2xfemalescream=1
 /Game/Sounds/SoundEffects/wilhelmscream.wilhelmscream=1
 /Game/Sounds/SoundEffects/scream03.scream03=1
 /Game/Sounds/SoundEffects/scream01.scream01=1
+/Game/Textures/Materials/M_Lava_Flowing.M_Lava_Flowing=0
+/Game/Textures/Materials/M_Lava_Pulse.M_Lava_Pulse=0
+/Game/Blueprints/ProjectilePhysicsAsset.ProjectilePhysicsAsset=0
+/Game/Textures/Materials/M_Ice_VertPaint.M_Ice_VertPaint=0
+/Game/Textures/Materials/M_Env_Icy_Snow.M_Env_Icy_Snow=0
+/Game/Textures/Materials/M_Env_Ice_Frozen_River_2.M_Env_Ice_Frozen_River_2=0
+/Game/Textures/Materials/M_Env_Ice_Frozen_River_1.M_Env_Ice_Frozen_River_1=0
+/Game/UI/PauseMenu.PauseMenu=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1294,6 +1341,8 @@ Border.Behavior=True
 Image.Behavior=True
 TextBlock.Performance=False
 K2Node_VariableGet.Variable=False
+BodySetup.Collision=True
+BodySetup.Physics=True
 
 [DetailPropertyExpansion]
 FoodProjectile_C=
@@ -1303,16 +1352,16 @@ PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 Object=
-FoodFightersChar_C=Object.ScreamsArray
-Character=Object.ScreamsArray
-Pawn=Object.ScreamsArray
+FoodFightersChar_C=
+Character=
+Pawn=
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
-SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
-SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" "Object.Tags.ComponentTags
+SkeletalMeshComponent=
+SkinnedMeshComponent=
 MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C=Object.Actor.Tags
-IceProjectile_C=Object.Actor.Tags
+FireProjectile_C="Object.Actor.Tags" 
+IceProjectile_C="Object.Actor.Tags" 
 MainMenu_C=
 UserWidget=
 Widget=
@@ -1320,8 +1369,8 @@ Visual=
 Button=
 ContentWidget=
 PanelWidget=
-ProjectileMovementComponent=Object.Tags.ComponentTags
-MovementComponent=Object.Tags.ComponentTags
+ProjectileMovementComponent=
+MovementComponent=
 ExperimentalProjectile_C=
 Border=
 EditableTextBox=Object.Style.WidgetStyle
@@ -1392,6 +1441,7 @@ bShowViewportTransportControls=True
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+ChangeVariableType_Warning=False
 
 [/Script/UnrealEd.PersonaOptions]
 ViewportBackgroundColor=(R=0.040000,G=0.040000,B=0.040000,A=0.000000)
@@ -1403,5 +1453,13 @@ DefaultBoneDrawSelection=1
 SectionTimingNodeColor=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
 NotifyTimingNodeColor=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
 BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[MaterialEditor]
+LightDir=P=-39.999985 Y=27.499983 R=0.000000
+PrimType=1
 
 
