Added main menu logo concept

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,10 +88,11 @@ LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=38.000
-WindowSize=X=1646.000 Y=974.000
+WindowSize=X=1656.000 Y=984.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -112,7 +113,7 @@ UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/External Assets/Sounds/Sound Effects/scream01.wav
+GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/External Assets/Texture Imports/foodfighterstest1.png
 GenericExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -572,6 +573,8 @@ StaticMeshEditor.TimeStamp=2017.02.03-01.08.10
 StaticMeshEditor.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2017.01.14-16.44.40
 MaterialEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2017.01.14-16.46.30
+TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Main
@@ -1193,6 +1196,12 @@ REINST_FoodFightersChar_C_830.Rendering=True
 REINST_FoodFightersChar_C_830.Replication=True
 REINST_FoodFightersChar_C_830.Input=True
 REINST_FoodFightersChar_C_830.Actor=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.ImportSettings=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Exported_content/Table_export/coffeet2obj_(1)/Coffeet2.Coffeet2;
@@ -1258,6 +1267,7 @@ LastLogListing=PIE
 /Game/Textures/Materials/M_Env_Ice_Frozen_River_2.M_Env_Ice_Frozen_River_2=0
 /Game/Textures/Materials/M_Env_Ice_Frozen_River_1.M_Env_Ice_Frozen_River_1=0
 /Game/UI/PauseMenu.PauseMenu=1
+/Game/Textures/foodfighterstest1.foodfighterstest1=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1360,8 +1370,8 @@ SkeletalMeshComponent=
 SkinnedMeshComponent=
 MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C="Object.Actor.Tags" 
-IceProjectile_C="Object.Actor.Tags" 
+FireProjectile_C=Object.Actor.Tags
+IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
 Widget=
@@ -1375,7 +1385,7 @@ ExperimentalProjectile_C=
 Border=
 EditableTextBox=Object.Style.WidgetStyle
 ProgressBar=Object.Style.WidgetStyle
-Image=Object.Appearance.Brush
+Image="Object.Appearance.Brush" 
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
